Added ARC header extraction as an configurable option and corrected the loading of properties.